Fix overflow border radius issue

--- a/htdocs/components/EG_00_parasite.css
+++ b/htdocs/components/EG_00_parasite.css
@@ -227,4 +227,5 @@
 
 div.image_container {
   border-radius: 5px !important;
+  overflow: hidden;
 }
